src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Age_Range__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Age range of individual 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_AgeRange&quot;</description>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>17-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to identify if contact is still alive 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Deceased&quot;</description>
        <label>Alive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to allow data sharing 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DoCdata&quot;</description>
        <label>Allow Data Sharing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Choice Yet</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Marketing_Info__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to allow sending marketing information 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DoCmarket&quot;</description>
        <label>Allow Marketing Info</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Choice Yet</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Mileage__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Number of kilometres the individual drives per year 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_AnnualMileage&quot;</description>
        <label>Annual Mileage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Required by business during the workshop, which exists in current avarto system ( 区号).</description>
        <label>Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Social_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required by business during the workshop, which exists in current avarto system (是否同意建立社区帐号).</description>
        <label>Build Social Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buy_Cycle__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Number of months to replace vehicle, i.e. buying cycle 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_BuyCycle&quot;</description>
        <label>Buy Cycle</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_CN__c</fullName>
        <description>Chinese dealer city name - 
For Dealers this is populated by the GSSN system - not modified in SFDC
Attribute in Data Dictionary object Dealer is &quot;Dealer_CityCN&quot;</description>
        <label>City CN</label>
        <picklist>
            <controllingField>Province__c</controllingField>
            <picklistValues>
                <fullName>安庆市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>蚌埠市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>亳州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>巢湖市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>池州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>滁州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>阜阳市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>合肥市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>淮北市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>淮南市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>黄山市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>六安市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>马鞍山市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宿州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>铜陵市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>芜湖市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宣城市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>昆山市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>澳门特区</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>金门县</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>连江县</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>龙岩市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>南平市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宁德市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>莆田市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>泉州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>三明市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>厦门市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>漳州市</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Attribute in Data Dictionary object Contact is &quot;Contact_CompanyName&quot;</description>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Background__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Background information on the customer the customer&apos;s or any family member&apos;s background is with the government 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_BackgroundInfo&quot;</description>
        <label>Contact Background</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByEpTransaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>CreatedByEpTransaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Function: Customer Number 
  For Dealer Accounts this field is used for the &quot;DMS magic number&quot;
Used in: Page Layouts, Reports 

Created by: Tony Li    Used by: Tony Li
Attribute in Data Dictionary object Contact is &quot;Contact_MagicNo&quot;</description>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DMS_Address__c</fullName>
        <description>DMS address of the customer delivered by GSSN</description>
        <label>DMS Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUP_Nummer__c</fullName>
        <description>Duplication number to identify the suspected duplication group to be filled by EP</description>
        <label>DUP Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Source of the contact to find out about us (first time) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DataSource&quot;</description>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Sub_Source__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subsource of the contact to find out about us (first time) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DataSubSource&quot;</description>
        <label>Data Sub-Source</label>
        <picklist>
            <controllingField>Data_Source__c</controllingField>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jingdong mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taobao station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperation media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China telecom / 189 mailbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunhill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUGO BOSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axciom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz interactive community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sina Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMART official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bitauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pcauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baidu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoHu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz website _ pre-sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz _ contact us _ test drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz _ contact us _ star gruppo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Flag for this dealer
Attribute in Data Dictionary object Dealer is &quot;Dealer_ActiveFlag&quot;</description>
        <label>Dealer Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_Addition_CN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 2 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Lio Huang
Modify Reason: Dealer Address additional value (for example, disctrict) (Chinese) from GSSN
*/</description>
        <label>Dealer Address Addition CN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_Addition_EN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 4 
Used in: Pagelayouts, Reports 
Modify History
Modify By: Lio Huang
Modify Reason: Dealer Address additional value (for example, disctrict) (Chinese) from GSSN 
*/
Only used for Dealer Address from GSSN</description>
        <label>Dealer Address Addition EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_CN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 1 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Lio Huang
Modify Reason: Dealer Address (Chinese) from GSSN
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_AddressCN&quot;</description>
        <label>Dealer Address CN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_EN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 3 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Lio Huang
Modify Reason: Dealer Address (Chinese) from GSSN
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_AddressEN&quot;</description>
        <label>Dealer Address EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Alternate_Name__c</fullName>
        <description>Alternate Dealer Name is populated by the GSSN interface
Allows up to 240 characters

/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer&apos;s name in Chinese
Used in: Page Layouts, Reports 

Modify History 
Modify By:  Lio,Tulipe, Rob - 
Modify Reason:  Will use this for the Dealer name in English
Populated by GSSN for the Dealer
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_NameEN&quot;</description>
        <inlineHelpText>Alternate Dealer Name is populated by the GSSN interface
Allows up to 240 characters</inlineHelpText>
        <label>Dealer Alternate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_BTLInfo__c</fullName>
        <description>Will be used for a query like this one:
select ID from account where BTLInfo &lt;&gt; &quot;123456789&quot;</description>
        <label>Dealer BTLInfo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Business_Hours__c</fullName>
        <description>Attribute in Data Dictionary object Dealer is &quot;Dealer_BusinessHours&quot;</description>
        <label>Dealer Business Hours</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_City_EN__c</fullName>
        <description>Changed from the name city
Attribute in Data Dictionary object Dealer is &quot;Dealer_CityEN&quot;</description>
        <label>Dealer City EN</label>
        <picklist>
            <controllingField>Province__c</controllingField>
            <picklistValues>
                <fullName>Anqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengbu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bozhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaohu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chizhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuyang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hefei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huaibei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huainan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huangshan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lu&apos;an</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ma&apos;anshan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tongling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wuhu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xuancheng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunshan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macao SAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kinmen County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lienchiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longyan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nanping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Putian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quanzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xiamen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zhangzhou</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_City__c</fullName>
        <label>Dealer City</label>
        <referenceTo>Dealer_City__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_Manager_Email__c</fullName>
        <description>Email of Complaint Manager from GSSN</description>
        <label>Dealer Complaint Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_Manager__c</fullName>
        <description>Dealer Sales Contact - updated by the GSSN system 
Read only in SFDC 
Rich text field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer Complaint Manager</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_AS_Code_2__c</fullName>
        <label>Dealer DMS AS Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_AS_Code__c</fullName>
        <label>Dealer DMS AS Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_CRM_Code_2__c</fullName>
        <description>Used for dealer mapping</description>
        <label>Dealer DMS CRM Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_CRM_Code__c</fullName>
        <description>Used for dealer mapping</description>
        <label>Dealer DMS CRM Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_SR_Code_2__c</fullName>
        <label>Dealer DMS SR Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_SR_Code__c</fullName>
        <label>Dealer DMS SR Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Default_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Function:  Indicates that this dealer is unique and should be visible in SFDC.  Defined by the GSSN interface. 

Feb18-2013-  Rob and Falk - based on GSSN interface requirements</description>
        <label>Dealer Default Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Email__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer&apos;s general email address 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_Email&quot;</description>
        <label>Dealer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Emergency_Number__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: A phone number provided by the dealer for emergency cases outside of business hours 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_EmergencyNumber&quot;</description>
        <label>Dealer Emergency Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_GC_Code__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: GS Code of dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_GCcode &quot;</description>
        <label>Dealer GC Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_GS_Code__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: GC Code of code 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Dealer GS Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_General_Manager_Email__c</fullName>
        <description>Email of General Manager from GSSN</description>
        <label>Dealer General Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_General_Manager__c</fullName>
        <description>Dealer General Contact - updated by the GSSN system 
Read only in SFDC 
Rich text field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer General Manager</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_Legal_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute in Data Dictionary object Dealer is &quot;Dealer_isLegalEntity&quot;</description>
        <label>Dealer Legal Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_MB_Sub_Region__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subregion of MB dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_RegionSubMB&quot;</description>
        <label>Dealer MB Sub-Region</label>
        <picklist>
            <picklistValues>
                <fullName>NORTH1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_ND_Code__c</fullName>
        <description>Added based on the GSSN interface mapping

Feb-18-2012: Added by Rob and Falk</description>
        <label>Dealer ND Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Presales_Email__c</fullName>
        <description>Email of Presales inquiry responsible person from GSSN</description>
        <label>Dealer Presales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Presales__c</fullName>
        <description>Dealer PreSales Contact - updated by the GSSN system 
Read only in SFDC 
Rich text field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer Presales</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_Province__c</fullName>
        <formula>TEXT( Dealer_City__r.Province__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Region__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Region of dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_Region&quot;</description>
        <label>Dealer Region</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_SSI_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Status of dealer&apos;s participation in the SSI program 
Used in: Page Layouts, Reports 

Modify History March 03, 2013
Modify By: Lio Huang
Modify Reason: Added the prefix &quot;Dealer&quot;, which indicates this field will only be used at dealer
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_NoSSI&quot;</description>
        <label>Dealer SSI Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Manager_Email__c</fullName>
        <description>Email of Sales Manager from GSSN</description>
        <label>Dealer Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Manager__c</fullName>
        <description>Dealer Sales Contact - updated by the GSSN system
Read only in SFDC
Rich text field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer Sales Manager</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Type__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The sales type of dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_SalesType&quot;</description>
        <label>Dealer Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>0=MBCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Star-Elite</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Service_Codes__c</fullName>
        <description>Dealer Services - based on the GSSN interface for the Dealer ActivityDefCodes

Feb-18-2012: Added by Rob and Falk
Attribute in Data Dictionary object Dealer is &quot;Dealer_Service&quot;</description>
        <label>Dealer Service Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSC Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>